organized the folders and added contents on types of vulnerabilities

--- a/recent-attacks.html
+++ b/recent-attacks.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="assets/js/tailwind.js"></script>
+        <script src="./assets/js/tailwind.js"></script>
         <title>ThreatScope</title>
     </head>
     <body class="text-zinc-800">
