--- a/types of vulnerabilities/software-bugs.html
+++ b/types of vulnerabilities/software-bugs.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="assets/js/tailwind.js"></script>
+        <script src="../assets/js/tailwind.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 
-    <body class="bg-blue-50 text-zinc-800">
+    <body class="bg-slate-950 text-white">
 
         <!-- header -->
-        <nav class="w-full bg-white shadow border border-gray-200 rounded p-4 flex items-center justify-between">
+        <nav class="w-full bg-slate-800 shadow p-4 flex items-center justify-betwee">
             <div class="flex items-center space-x-4">
                 <img src="assets/logo.png" class="w-14 h-14">
                 <h4 class="text-2xl">ThreatScope</h4>
@@ -25,18 +25,18 @@
         </nav>
 
         <!-- body -->
-        <h3 class="max-w-7xl mx-auto mt-4 font-semibold">Concept of Cybersecurity / Origin of Hacking and Cybercrime</h3>
+        <h3 class="max-w-7xl mx-auto mt-4 font-semibold"><a href="../concept.html">Types of Vulnerabilities</a> / <a href="./software-bugs.html">Software Bugs</a></h3>
         <div id="hero" class="text-center">
             <div class="max-w-7xl my-24 mx-auto">
-                <h3 class="text-6xl font-semibold">Origin of Hacking and Cybercrime</h3>
-                <h6 class="text-2xl mt-4">Emergence of Hacking | Milestones incidents | Cybercrime in Digital Age.</h6>
+                <h3 class="text-6xl font-semibold">Software Bugs</h3>
+                <h6 class="text-2xl mt-4"><a href="#overview">Overview</a> | <a href="how-it-works">How It Works</a> | <a href="#digital-age">Cybercrime in Digital Age</a></h6>
             </div>
         </div>
 
-        <div class="max-w-7xl my-24 mx-auto">
-            <h6 class="text-indigo-600 text-2xl mt-4 font-medium">The Emergence of Hacking as a Concept</h6>
-            <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>    
-            <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>
+        <div class="max-w-7xl my-24 mx-auto" id="overview">
+            <h6 class="text-indigo-600 text-2xl mt-4 font-medium">Overview</h6>
+            <p class="mt-4 text-justify">Software bugs are inadvertent defects or mistakes in computer programs that lead to unexpected behavior, crashes, or inaccurate output. Usually, these problems result from errors made in the software development process during the design, coding, or testing stages. Logic errors, syntax errors, and integration problems are common bug types that can jeopardize the dependability and functionality of software applications. SonarSource claims that these bugs frequently arise from coding mistakes that cause unexpected runtime behavior. Since these bugs have the potential to cause serious operational disruptions and security vulnerabilities, fixing them is essential.</p>    
+            <p class="mt-4 text-justify">Besides just being technical issues, software bugs can have a significant negative impact on an organization's finances and reputation. For example, millions of users may be impacted by a small bug in a popular application, which could result in a decline in trust and possible legal ramifications. Furthermore, software defects can present significant safety hazards in vital systems like healthcare or aviation. To find and fix bugs early in the development cycle, it is crucial to implement strict testing and quality assurance procedures. SonarQube and other tools help developers identify and fix these problems quickly, guaranteeing the delivery of dependable and secure software.</p>
         </div>
 
         <div class="max-w-7xl w-full my-24 mx-auto">
@@ -47,14 +47,14 @@
               <!-- Incident 1 -->
               <div class="bg-white rounded-lg shadow-md p-6">
                 <h2 class="text-indigo-600 font-semibold mb-2">Incident 1</h2>
-                <p class="mt-4">
+                <p class="mt-4 text-black text-justify">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora.</p>
               </div>
               
               <!-- Incident 2 -->
               <div class="bg-white rounded-lg shadow-md p-6">
                 <h2 class="text-indigo-600 font-semibold mb-2">Incident 2</h2>
-                <p class="mt-4">
+                <p class="mt-4 text-black text-justify">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora.
                 </p>
               </div>
@@ -62,7 +62,7 @@
               <!-- Incident 3 -->
               <div class="bg-white rounded-lg shadow-md p-6">
                 <h2 class="text-indigo-600 font-semibold mb-2">Incident 3</h2>
-                <p class="mt-4">
+                <p class="mt-4 text-black text-justify">
                   Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora.
                 </p>
               </div>
