--- a/types-of-vulnerabilities/software-bugs.html
+++ b/types-of-vulnerabilities/software-bugs.html
@@ -96,7 +96,7 @@
 
 
         <!-- footer -->
-        <footer class="w-full max-w-7xl mx-auto p-2 mt-24 p-8 flex justify-between">
+        <footer class="w-full max-w-7xl mx-auto p-2 mt-24 flex justify-between">
           <div>
               <h4 class="text-indigo-600 text-3xl font-medium">ThreatScope</h4>
               <p class="text-gray-500">© 2024 | All rights reserved.</p>
