--- a/famous-cyber-attacks/i-love-you-virus.html
+++ b/famous-cyber-attacks/i-love-you-virus.html
@@ -33,7 +33,7 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">WannaCry Ransomware Attack</h4>
+				<h4 class="text-6xl font-medium">I Love You Virus</h4>
 				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
 			</div>
 		</div>
@@ -42,31 +42,31 @@
 		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-4 px-2">
 			<div class="max-w-7xl mx-auto space-y-20">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Overview</h4>
-                    <p>The WannaCry ransomware attack occurred in May 2017 and quickly became one of the largest cyberattacks in history. It targeted Microsoft Windows systems, spreading rapidly across over 150 countries. Victims included major hospitals, corporations, and government agencies, leading to critical disruptions. The attack exploited a vulnerability known as EternalBlue, which had been leaked from U.S. intelligence services. Although a security patch had been released before the attack, many organizations had not applied it. The ransomware encrypted files and demanded Bitcoin payments for decryption keys. The attack highlighted the severe risks posed by outdated systems. It also demonstrated how cyberweapons developed by nation-states could be repurposed by criminals.</p>
+                    <h4 class="font-medium text-2xl text-indigo-600">Overview</h4>
+                    <p>The ILOVEYOU virus was a computer worm that began spreading in May 2000. Originating from the Philippines, it was distributed through email with the subject "ILOVEYOU" and an attachment that appeared to be a love letter. Once opened, the worm overwrote important files and automatically sent itself to everyone in the victim’s email contacts. It spread rapidly across the world within hours, affecting millions of computers. The worm caused approximately $10 billion in damages globally. It prompted a global conversation about email security and safe computing practices. The creators were not prosecuted due to the lack of applicable laws in the Philippines at that time.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Method of Attack</h4>
-                    <p>The attackers used a wormable ransomware that leveraged the EternalBlue vulnerability in the Windows SMBv1 protocol to spread across networks. Once a system was infected, WannaCry encrypted important files and displayed a ransom note demanding Bitcoin payment. The malware also attempted to spread itself laterally to other vulnerable systems automatically. Although ransomware was the primary threat, the worm-like behavior made it particularly devastating. A "kill switch" domain was accidentally discovered, which helped slow the spread.</p>
+                    <h4 class="font-medium text-2xl text-indigo-600">Method of Attack</h4>
+                    <p>The worm was disguised as a .TXT file, but it was actually a malicious Visual Basic Script (.VBS) file. When the attachment was opened, it overwrite files, stole passwords, and spread by emailing itself to all contacts. The attack relied heavily on human error, exploiting curiosity and trust. It did not need advanced exploits or vulnerabilities, only user interaction. This simplicity made it one of the most devastating social engineering attacks ever.The worm was disguised as a .TXT file, but it was actually a malicious Visual Basic Script (.VBS) file. When the attachment was opened, it overwrite files, stole passwords, and spread by emailing itself to all contacts. The attack relied heavily on human error, exploiting curiosity and trust. It did not need advanced exploits or vulnerabilities, only user interaction. This simplicity made it one of the most devastating social engineering attacks ever.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl">Impact and Consequences</h4>
+                    <h4 class="font-medium text-2xl text-indigo-600">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
-                            <p>The United Kingdom's National Health Service (NHS) was one of the hardest-hit organizations, leading to canceled surgeries and diverted ambulances. Critical medical equipment and patient records became inaccessible, creating a national healthcare emergency. It exposed serious cybersecurity weaknesses within essential public infrastructure.</p>
+                            <p>Government offices, including the Pentagon and British Parliament, were forced to shut down email systems. Critical communications were disrupted for days as a result of the virus. The operational downtime cost millions in lost productivity.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
-                            <p>Global businesses such as FedEx and Renault also suffered major disruptions. FedEx reported widespread system outages, severely impacting logistics and delivery operations. Renault had to temporarily halt manufacturing at several plants to contain the spread of the ransomware.</p>
+                            <p>Corporations suffered major financial losses due to the need for extensive system cleaning and recovery. Many had to wipe and rebuild entire networks to ensure the worm was eradicated. This also led to unexpected budget increases for cybersecurity resources.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
-                            <p>The total economic damages from WannaCry were estimated to be between $4 billion and $8 billion globally. Many small and medium-sized businesses lacked the resources to recover quickly from the attack. This economic shockwave led companies to reassess their investment in cybersecurity preparedness.</p>
+                            <p>The ILOVEYOU virus triggered a major public awareness campaign about email security. Users became more cautious about opening email attachments from unknown senders. It also pushed software companies to improve file-type handling and email scanning technologies.</p>
                         </div>
                         <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
-                            <p>Governments worldwide initiated urgent cybersecurity reviews after the WannaCry attack. New policies were created to improve the speed of critical patches and encourage better cooperation between the private sector and government agencies. It also reignited debates about the responsibility of intelligence agencies in securing or disclosing cyber vulnerabilities.</p>
+                            <p>The virus revealed serious gaps in international cybercrime law enforcement. Philippine authorities could not prosecute the creators initially due to the lack of applicable legislation. This spurred the development of new cybercrime laws globally.</p>
                         </div>
                     </div>
                 </div>
