--- a/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
+++ b/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
@@ -43,32 +43,32 @@
 		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-6 px-2">
             <div class="max-w-7xl mx-auto space-y-20">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-indigo-600">The Initial Discovery of Software Vulnerabilities</h4>
+                    <h4 class="font-medium text-2xl text-[#E2C8F1]">The Initial Discovery of Software Vulnerabilities</h4>
                     <div class="space-y-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.</p>
                     </div>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="text-medium text-2xl text-indigo-600">Common Early Exploits and Attacks</h4>
+                    <h4 class="text-medium text-2xl text-[#E2C8F1]">Common Early Exploits and Attacks</h4>
                     <div class="grid grid-cols-3 gap-4">
-                        <div class="bg-zinc-800 p-4 rounded space-y-2">
-                            <h6 class="text-2xl font-medium">Phishing</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
+                        <div class="p-5 bg-[#111436] outline outline-2 outline-white rounded">
+                            <h6 class="text-2xl font-medium text-[#E2C8F1] mb-2">Phishing</h6>
+                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
                             <button class="bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
                               Learn More</button>
                         </div>
 
-                        <div class="bg-zinc-800 p-4 rounded space-y-2">
-                            <h6 class="text-2xl font-medium">Ransomware</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
+                        <div class="p-5 bg-[#111436] outline outline-2 outline-white rounded">
+                            <h6 class="text-2xl font-medium text-[#E2C8F1] mb-2">Ransomware</h6>
+                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
                             <button class="bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
                               Learn More</button>
                         </div>
 
-                        <div class="bg-zinc-800 p-4 rounded space-y-2">
-                            <h6 class="text-2xl font-medium">SQL Injextion</h6>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
+                        <div class="p-5 bg-[#111436] outline outline-2 outline-white rounded">
+                            <h6 class="text-2xl font-medium text-[#E2C8F1] mb-2">SQL Injextion</h6>
+                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
                             <button class="bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
                               Learn More</button>
                         </div>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="space-y-4">
-                    <div class="text-medium text-2xl text-indigo-600">The Developement of Security Patching and Updates</div>
+                    <div class="text-medium text-2xl text-[#E2C8F1] ">The Developement of Security Patching and Updates</div>
                     <div class="grid grid-cols-2 gap-8">
                         <img src="https://placehold.co/300x300" class="w-full rounded h-96 object-cover border">
                         <div class="flex items-center justify-center">
