--- a/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
+++ b/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
@@ -40,7 +40,7 @@
                 </div>
 			</div>
 		</div>
-		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-6 px-2">
+		<div class="bg-gradient-to-b from-black to-[#141528] pt-24 space-y-6 px-2">
             <div class="max-w-7xl mx-auto space-y-20">
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">The Initial Discovery of Software Vulnerabilities</h4>
@@ -52,23 +52,23 @@
                 <div class="space-y-4">
                     <h4 class="text-medium text-2xl text-[#E2C8F1]">Common Early Exploits and Attacks</h4>
                     <div class="grid grid-cols-3 gap-4">
-                        <div class="p-5 bg-[#111436] outline outline-2 outline-white rounded">
-                            <h6 class="text-2xl font-medium text-[#E2C8F1] mb-2">Phishing</h6>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
+                        <div class="p-5 bg-[#141528] border-indigo-900/50 rounded space-y-4">
+                            <h6 class="text-2xl font-medium text-[#E2C8F1]">Phishing</h6>
+                            <p class="text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
                             <button class="bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
                               Learn More</button>
                         </div>
 
-                        <div class="p-5 bg-[#111436] outline outline-2 outline-white rounded">
-                            <h6 class="text-2xl font-medium text-[#E2C8F1] mb-2">Ransomware</h6>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
+                        <div class="p-5 bg-[#141528] border-indigo-900/50 rounded space-y-4">
+                            <h6 class="text-2xl font-medium text-[#E2C8F1]">Ransomware</h6>
+                            <p class="text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
                             <button class="bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
                               Learn More</button>
                         </div>
 
-                        <div class="p-5 bg-[#111436] outline outline-2 outline-white rounded">
-                            <h6 class="text-2xl font-medium text-[#E2C8F1] mb-2">SQL Injextion</h6>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
+                        <div class="p-5 bg-[#141528] border-indigo-900/50 rounded space-y-4">
+                            <h6 class="text-2xl font-medium text-[#E2C8F1]">SQL Injextion</h6>
+                            <p class="text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa deserunt natus eaque porro, cumque nam provident animi, adipisci voluptatem soluta laboriosam itaque laborum quas repellendus autem voluptatum placeat inventore maxime, minima dicta. Beatae obcaecati quo fugiat et nisi tempore nesciunt labore dolorum doloremque tenetur numquam, architecto vitae reprehenderit at. Saepe modi repellendus nisi assumenda earum quia eligendi, illo perferendis, ullam iure itaque sint maiores voluptatum doloremque aliquam cumque rem aperiam.</p>
                             <button class="bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
                               Learn More</button>
                         </div>
@@ -76,22 +76,21 @@
                 </div>
 
                 <div class="space-y-4">
-                    <div class="text-medium text-2xl text-[#E2C8F1] ">The Developement of Security Patching and Updates</div>
-                    <div class="grid grid-cols-2 gap-8">
-                        <img src="https://placehold.co/300x300" class="w-full rounded h-96 object-cover border">
-                        <div class="flex items-center justify-center">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae corrupti molestias neque quaerat expedita odit veritatis alias dicta ex mollitia fugit, possimus doloribus ut nam odio laborum ullam tempora! Fugiat iure, veniam eum voluptatem nulla suscipit accusamus commodi fugit eos, iste sint cum atque corrupti omnis consequuntur perferendis adipisci cupiditate nostrum repudiandae hic molestiae. Numquam in provident hic facere illo, beatae harum laborum tempore pariatur nobis. Eligendi consequuntur hic dignissimos quas facere excepturi, quibusdam labore rerum harum eos earum veritatis, placeat omnis. Dolore nostrum aperiam dolorum, suscipit porro repellat ex velit est fugit neque harum ut. Et iste tempore harum veniam natus deleniti accusamus repellendus laboriosam perferendis eum, reprehenderit architecto odit quasi.</p>
-                        </div>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Ex sapien vitae pellentesque sem placerat in id. Pretium tellus duis convallis tempus leo eu aenean. Urna tempor pulvinar vivamus fringilla lacus nec metus. Iaculis massa nisl malesuada lacinia integer nunc posuere. Semper vel class aptent taciti sociosqu ad litora. Conubia nostra inceptos himenaeos orci varius natoque penatibus. Dis parturient montes nascetur ridiculus mus donec rhoncus. Nulla molestie mattis scelerisque maximus eget fermentum odio. Purus est efficitur laoreet mauris pharetra vestibulum fusce.
+                    <div class="text-medium text-2xl" id="Cybercrime">Understanding Cybercrime in the Digital Age</div>
+                  
+                    <p class="text-justify">
+                        <img src="https://placehold.co/300x300" class="float-left mr-6 mb-4 w-64 rounded object-cover border" />
+                        Cybercrimes, which include illicit actions conducted via computers or the internet, have grown to be a serious threat in the digital age. These crimes, which impact people, businesses, and governments alike, can vary from identity theft and financial fraud to cyberbullying and data breaches. Cybercriminals now have more opportunity to take advantage of weaknesses due to the growing dependence on digital platforms for government, commerce, and communication. Understanding the nature of cybercrimes and the techniques used to investigate them is crucial because, as technology advances, so do the strategies used by cybercriminals.
                     </p>
+                  
+                    <p class="text-justify">Cybercrime investigations require a multipronged strategy that combines sophisticated digital forensics with conventional law enforcement methods. When it comes to locating, pursuing, and prosecuting cybercriminals, organizations like the FBI and the Department of Homeland Security are essential. Because cybercrimes can occur across borders, these investigations frequently call for cross-border cooperation. Additionally, because technology is developing so quickly, investigative techniques must be continuously modified to stay up with new cyberthreats. Anyone traversing the digital landscape must have a thorough understanding of the intricacies of cybercrime and the efforts being made to combat it.</p>
                 </div>
             </div>
         </div>
 		
 
-		<footer class="text-white w-full p-4 pt-24 bg-zinc-900">
-            <div class="max-w-7xl mx-auto border p-6 border-zinc-700 bg-zinc-800 rounded md:flex block justify-between">
+		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
+            <div class="max-w-7xl mx-auto border p-6 bg-[#141538]/80 border-indigo-900/50 rounded md:flex block justify-between">
                 <div>
                     <div class="flex items-center space-x-4">
                         <img src="../assets/logo.png" class="h-10 w-10" alt="Logo" />
