--- a/famous-cyber-attacks/i-love-you-virus.html
+++ b/famous-cyber-attacks/i-love-you-virus.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
-		<!-- NAVIGATION -->
 		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/hero-bg.jpg')] bg-cover bg-center bg-no-repeat relative">
             <nav class="w-full p-4 flex items-center justify-between">
                 <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -33,45 +32,49 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">I Love You Virus</h4>
-				<p class="mt-4">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
+				<h4 class="text-6xl font-medium">History of Computer Vulnerabilities</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="">Initial Discovery </a>
+                    <a href="">Common Early Exploits and Attacks</a>
+                    <a href="">The Development of Security Patching</a>
+                </div>
 			</div>
 		</div>
-
-        <!-- CONTENT -->
-		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-4 px-2">
+		<div class="bg-gradient-to-b from-black to-zinc-900 pt-24 space-y-6 px-2">
 			<div class="max-w-7xl mx-auto space-y-20">
+
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-indigo-600">Overview</h4>
+                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>The ILOVEYOU virus was a computer worm that began spreading in May 2000. Originating from the Philippines, it was distributed through email with the subject "ILOVEYOU" and an attachment that appeared to be a love letter. Once opened, the worm overwrote important files and automatically sent itself to everyone in the victim’s email contacts. It spread rapidly across the world within hours, affecting millions of computers. The worm caused approximately $10 billion in damages globally. It prompted a global conversation about email security and safe computing practices. The creators were not prosecuted due to the lack of applicable laws in the Philippines at that time.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-indigo-600">Method of Attack</h4>
+                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>The worm was disguised as a .TXT file, but it was actually a malicious Visual Basic Script (.VBS) file. When the attachment was opened, it overwrite files, stole passwords, and spread by emailing itself to all contacts. The attack relied heavily on human error, exploiting curiosity and trust. It did not need advanced exploits or vulnerabilities, only user interaction. This simplicity made it one of the most devastating social engineering attacks ever.The worm was disguised as a .TXT file, but it was actually a malicious Visual Basic Script (.VBS) file. When the attachment was opened, it overwrite files, stole passwords, and spread by emailing itself to all contacts. The attack relied heavily on human error, exploiting curiosity and trust. It did not need advanced exploits or vulnerabilities, only user interaction. This simplicity made it one of the most devastating social engineering attacks ever.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-indigo-600">Impact and Consequences</h4>
+                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
+                        <div class="p-5 bg-[#111436] outline outline-1 outline-white rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Government offices, including the Pentagon and British Parliament, were forced to shut down email systems. Critical communications were disrupted for days as a result of the virus. The operational downtime cost millions in lost productivity.</p>
                         </div>
-                        <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
+                        <div class="p-5 bg-[#111436] outline outline-1 outline-white rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>Corporations suffered major financial losses due to the need for extensive system cleaning and recovery. Many had to wipe and rebuild entire networks to ensure the worm was eradicated. This also led to unexpected budget increases for cybersecurity resources.</p>
                         </div>
-                        <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
+                        <div class="p-5 bg-[#111436] outline outline-1 outline-white rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The ILOVEYOU virus triggered a major public awareness campaign about email security. Users became more cautious about opening email attachments from unknown senders. It also pushed software companies to improve file-type handling and email scanning technologies.</p>
                         </div>
-                        <div class="border bg-zinc-800 border-zinc-700 rounded p-4 space-y-2">
+                        <div class="p-5 bg-[#111436] outline outline-1 outline-white rounded space-y-2">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>The virus revealed serious gaps in international cybercrime law enforcement. Philippine authorities could not prosecute the creators initially due to the lack of applicable legislation. This spurred the development of new cybercrime laws globally.</p>
                         </div>
                     </div>
                 </div>
+                
             </div>
-		</div>
+	    </div>
 		
 
 		<footer class="text-white w-full p-4 pt-24 bg-zinc-900">
